--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@ Home
 
     <div class="card">
         <h1><b>Hello AI World</b></h1>
-        <h2><b>Hello World</b></h2>
+        <h2><b>Hello AI World</b></h2>
         <h3><b>Hello World</b></h3>
         <h4><b>Hello World</b></h4>
         <h5><b>Hello World</b></h5>
